# detadict

./: .pre-commit-config.yaml  README.md  pyproject.toml
detadict/: detadict.py  types.py
